# devkit

./: .clang-format  .gitignore  LICENSE  meson.build  readme.md
app/: sk.cpp
completions/: sk.fish
devcpp/: compile_commands.json  meson.build
devcpp/include/devcpp/: type.hpp
devcpp/include/devcpp/reader/: bag_reader.hh  reader.hh
devcpp/include/devcpp/writer/: bag_writer.hh  writer.hh
devcpp/tests/: generator.py
devdocker/dev:humble/: build
devdocker/dev:humble/etc/: bashrc
devdocker/dev:humble/example/_etc/: init
devdocker/dev:humble/example/publisher/: CMakeLists.txt
devdocker/dev:humble/example/publisher/src/: publisher.cpp
devdocker/dev:humble/example/subscriber/: compile_commands.json
devdocker/dev:melodic/: Dockerfile  build
devdocker/dev:melodic/example/: xproj
devdocker/dev:melodic/example/publisher/: CMakeLists.txt  compile_commands.json  package.xml
devdocker/dev:melodic/example/subscriber/: package.xml
devdocker/dev:noetic/: Dockerfile  build
devdocker/dev:noetic/etc/: bashrc
devdocker/dev:noetic/example/: Dockerfile
devdocker/dev:noetic/example/_etc/sessions/: sessions
devdocker/ros:humble/: build  run
devdocker/ros:melodic/: build  run
devdocker/ros:noetic/: build  run
devdocker/ros:noetic/etc/: setup.sh
flake/: flake.nix
modules/devdocker/dev:humble/: Dockerfile
modules/devdocker/dev:humble/etc/: bashrc
modules/devdocker/dev:humble/example/: Dockerfile
modules/devdocker/dev:humble/example/publisher/: package.xml
modules/devdocker/dev:humble/example/subscriber/: CMakeLists.txt  package.xml
modules/devdocker/dev:melodic/example/: Dockerfile
modules/devdocker/dev:melodic/example/publisher/src/: publisher.cpp
modules/devdocker/dev:melodic/example/subscriber/: CMakeLists.txt
modules/devdocker/dev:noetic/etc/: bashrc
modules/devdocker/dev:noetic/example/_etc/: init
modules/devdocker/ros:humble/: Dockerfile
modules/devdocker/ros:humble/etc/: setup.sh
modules/devdocker/ros:melodic/: Dockerfile  build
modules/devdocker/ros:melodic/etc/: setup.sh
modules/devdocker/ros:noetic/: Dockerfile  build
modules/devdocker/ros:noetic/etc/: entrypoint.sh
modules/devflake/: flake.nix
src/: args.hh  defer.hh  fmt.hh  lua.hh  options.hh  task.hh
test/: generator.py
